# tales-of-a

./: .gitignore  MANIFEST.in  Makefile  README.md  bot.py  config.py  game.py  player.py  pyproject.toml  requirements.txt
.github/workflows/: discord_notification.yml
tales/: bot.py  config.py  game.py  movebuttonview.py  player.py  tales.py
